# BeastServer

./: CMakeLists.txt  README.md  main.cpp
Connection/: Connection.cpp  Connection.h
IOServicePool/: AsioIOServicePool.cpp  AsioIOServicePool.h
ServerStateInfo/: ServerStateInfo.h  Singleton.h
Test/: JsonTest.cpp  SingletonServerStateInfoTest.cpp
